task5-validation-exception-dto

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,6 @@
 PORT = 
 
+#DB project
 DB_HOST = 
 DB_PORT = 
 DB_USER = 
@@ -9,5 +10,9 @@ DB_NAME =
 JWT_SECRET =
 JWT_EXPIRES_IN =
 
+#DB creat admin
+DB_HOSTAD = 
+DB_PORTAD =
 ADMIN_EMAIL =
 ADMIN_PASSWORD =
+ADMIN_USERNAME =
